Fixes canvas background cutting off

--- a/app/static/css/landing_style.css
+++ b/app/static/css/landing_style.css
@@ -52,10 +52,10 @@ body {
   }
   
 #canvas1 {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     z-index: -1;
 }
